--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch with the teaching staff? Please send an email to <span><a href="mailto:heafcoding@gmail.com">heafcoding@gmail.com</a></span> and we will get back to you as soon as possible.</p>
+          <p>Want to get in touch with the teaching staff? Please send an email to <span><a href="mailto:teachers@heafcoding.org">teachers@heafcoding.org</a></span> and we will get back to you as soon as possible.</p>
         </div>
       </div>
     </div>
